# gtk-algebra

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt  Lexer.cpp  Lexer.h  Token.cpp  Token.h
lib/ast/: Constant.cpp  Constant.h  Expression.cpp  Expression.h  Operation.cpp  Operation.h  Variable.cpp  Variable.h
lib/lexer/: Lexer.cpp  Token.cpp  Token.h
lib/parser/: Parser.cpp  Parser.h  ScopeParser.cpp  ScopeParser.h
lib/solver/: Solver.cpp  Solver.h
src/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  main.cpp
src/interfaces/: TopBoxDelegate.cpp  TopBoxDelegate.h
src/ui/: TopBox.cpp  TopBox.h
test/: CMakeLists.txt  expression_tests.cpp  main.cpp  parser_tests.cpp  solver_tests.cpp  token_tests.cpp
